test/errors/syntax/assign_to_const.yasl
const x = 10;

x = 11;
